Fixes issues with center alignment

--- a/sass/utility.scss
+++ b/sass/utility.scss
@@ -11,6 +11,7 @@
 
 //Element alignment
 .align-center {
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
